DS-1782 downgraded to Java 11
Signed-off-by: VladyslavHnes <vladyslav.hnes@gmail.com>