@@ -231,16 +231,25 @@ public class NLConnector extends PSQLXyzConnector {
         else if (key.equalsIgnoreCase("properties." + GLOBAL_VERSION_SEARCH_KEY)
                 && operation.equals(PropertyQuery.QueryOperation.EQUALS)) {
           for(Object v : values){
-            if(v instanceof Integer globalVersion)
+            if(v instanceof Integer) {
+              Integer globalVersion = (Integer) v;
               globalVersions.add(globalVersion);
-            else if(v instanceof Long globalVersion)
+            }
+            else if(v instanceof Long) {
+              Long globalVersion = (Long) v;
               globalVersions.add(globalVersion.intValue());
-            else if(v instanceof List<?> globalVersionList){
+            }
+            else if(v instanceof List<?>){
+              List<?> globalVersionList = (List<?>) v;
               for(Object vv : globalVersionList){
-                if(vv instanceof Integer globalVersion)
+                if(vv instanceof Integer) {
+                  Integer globalVersion = (Integer) vv;
                   globalVersions.add(globalVersion);
-                else if(vv instanceof Long globalVersion)
+                }
+                else if(vv instanceof Long) {
+                  Long globalVersion = (Long) vv;
                   globalVersions.add(globalVersion.intValue());
+                }
                 else
                   throw new IllegalArgumentException("Value for 'p." + GLOBAL_VERSION_SEARCH_KEY + "' must be an Integer or a List<Integer>!");
               }
@@ -264,7 +273,23 @@ public class NLConnector extends PSQLXyzConnector {
     return run( new EraseSpace(event).withTableLayout(NEW_LAYOUT));
   }
 
-  public record PropertiesQueryInput(String refQuad, List<Integer> globalVersions) {}
+  public static class PropertiesQueryInput {
+    private final String refQuad;
+    private final List<Integer> globalVersions;
+
+    public PropertiesQueryInput(String refQuad, List<Integer> globalVersions) {
+      this.refQuad = refQuad;
+      this.globalVersions = globalVersions;
+    }
+
+    public String refQuad() {
+      return refQuad;
+    }
+
+    public List<Integer> globalVersions() {
+      return globalVersions;
+    }
+  }
 
 
   @Override
@@ -458,12 +483,11 @@ public class NLConnector extends PSQLXyzConnector {
     String baseTable = tables.size() == 2 ? tables.get(1) : null;
 
     // Build the WHERE filter fragment (shared)
-    StringBuilder filter = new StringBuilder("""
-            WHERE  operation NOT IN (
-              SELECT unnest(ARRAY['D','H','J']::CHAR[])
-            )
-            AND next_version = 9223372036854775807::BIGINT
-            """);
+    StringBuilder filter = new StringBuilder(
+            "WHERE  operation NOT IN (\n" +
+            "  SELECT unnest(ARRAY['D','H','J']::CHAR[])\n" +
+            ")\n" +
+            "AND next_version = 9223372036854775807::BIGINT\n");
     if (refQuad != null) {
       filter.append(" AND searchable->'refQuad' >= to_jsonb('")
               .append(refQuad)
@@ -483,15 +507,14 @@ public class NLConnector extends PSQLXyzConnector {
     // Inner selects (no LIMIT yet, apply after UNION to keep global limit semantics)
     String inner1 = "SELECT * FROM \"" + schema + "\".\"" + extensionTable + "_head\" " + filter;
     String inner2 = "SELECT * FROM \"" + schema + "\".\"" + baseTable + "_head\" " + filter;
-    String whereNotExistsCondition = """
-            WHERE NOT EXISTS (
-                  SELECT 1
-                  	FROM "$schema$"."$table$"
-                  WHERE id = a.id
-                    AND next_version = 9223372036854775807::BIGINT
-                    AND operation != 'D'
-                )
-            """
+    String whereNotExistsCondition = (
+            "WHERE NOT EXISTS (\n" +
+            "      SELECT 1\n" +
+            "      \tFROM \"$schema$\".\"$table$\"\n" +
+            "      WHERE id = a.id\n" +
+            "        AND next_version = 9223372036854775807::BIGINT\n" +
+            "        AND operation != 'D'\n" +
+            "    )\n")
             .replace("$schema$", schema)
             .replace("$table$", extensionTable);
 
@@ -514,27 +537,26 @@ public class NLConnector extends PSQLXyzConnector {
     }
 
     // FeatureCollection aggregation across unioned rows
-    String selection = """
-        '{ "type": "FeatureCollection", "features": [' ||
-         COALESCE(
-           string_agg(
-             regexp_replace(
-               regexp_replace(
-                 jsondata,
-                 '("(@ns:com:here:xyz)"\\s*:\\s*\\{)',
-                 '\\1"version":' || version || ',"author":"' || coalesce(author, 'ANONYMOUS') || '",',
-                 'g'
-               ),
-               '^{',
-               '{' || '"geometry":' || coalesce(ST_AsGeoJSON(geo, 8), 'null') || ',',
-               'g'
-             ),
-             ','
-           ),
-           ''
-         )
-         || '] }' AS featureCollection
-        """;
+    String selection =
+        "'{ \"type\": \"FeatureCollection\", \"features\": [' ||\n" +
+        " COALESCE(\n" +
+        "   string_agg(\n" +
+        "     regexp_replace(\n" +
+        "       regexp_replace(\n" +
+        "         jsondata,\n" +
+        "         '(\"(@ns:com:here:xyz)\"\\s*:\\s*\\{)',\n" +
+        "         '\\1\"version\":' || version || ',\"author\":\"' || coalesce(author, 'ANONYMOUS') || '\",',\n" +
+        "         'g'\n" +
+        "       ),\n" +
+        "       '^{',\n" +
+        "       '{' || '\"geometry\":' || coalesce(ST_AsGeoJSON(geo, 8), 'null') || ',',\n" +
+        "       'g'\n" +
+        "     ),\n" +
+        "     ','\n" +
+        "   ),\n" +
+        "   ''\n" +
+        " )\n" +
+        " || '] }' AS featureCollection\n";
 
     return "SELECT " + selection + " FROM (" + finalQuery + ") t";
   }
@@ -548,25 +570,24 @@ public class NLConnector extends PSQLXyzConnector {
           List<ModificationFailure> fails
   ) throws SQLException, JsonProcessingException {
 
-    String mergeSql = """
-        MERGE INTO %s.%s AS t
-        USING (
-          VALUES (?, ?, ?, ?, ?, ?, ?)
-        ) AS s(id, geo, operation, author, version, jsondata, searchable)
-        --ON (t.id = s.id AND t.next_version = 9223372036854775807 AND t.global_version = s.global_version)
-        ON (t.id = s.id AND t.version = s.version AND t.next_version = 9223372036854775807)
-        WHEN MATCHED THEN
-          UPDATE SET
-            jsondata  = s.jsondata,
-            geo       = s.geo,
-            version   = s.version,
-            author    = s.author,
-            operation = 'U',
-            searchable = s.searchable
-        WHEN NOT MATCHED THEN
-          INSERT (id, geo, operation, author, version, jsondata, searchable)
-          VALUES (s.id, s.geo, s.operation, s.author, s.version, s.jsondata, s.searchable);
-        """.formatted(schema, table);
+    String mergeSql = String.format(
+        "MERGE INTO %s.%s AS t\n" +
+        "USING (\n" +
+        "  VALUES (?, ?, ?, ?, ?, ?, ?)\n" +
+        ") AS s(id, geo, operation, author, version, jsondata, searchable)\n" +
+        "--ON (t.id = s.id AND t.next_version = 9223372036854775807 AND t.global_version = s.global_version)\n" +
+        "ON (t.id = s.id AND t.version = s.version AND t.next_version = 9223372036854775807)\n" +
+        "WHEN MATCHED THEN\n" +
+        "  UPDATE SET\n" +
+        "    jsondata  = s.jsondata,\n" +
+        "    geo       = s.geo,\n" +
+        "    version   = s.version,\n" +
+        "    author    = s.author,\n" +
+        "    operation = 'U',\n" +
+        "    searchable = s.searchable\n" +
+        "WHEN NOT MATCHED THEN\n" +
+        "  INSERT (id, geo, operation, author, version, jsondata, searchable)\n" +
+        "  VALUES (s.id, s.geo, s.operation, s.author, s.version, s.jsondata, s.searchable);\n", schema, table);
 
     try (Connection connection = dataSourceProvider.getWriter().getConnection()) {
       connection.setAutoCommit(false);
@@ -614,11 +635,10 @@ public class NLConnector extends PSQLXyzConnector {
           List<ModificationFailure> fails
   ) throws SQLException, JsonProcessingException {
 
-    String insertSql = """
-        INSERT INTO %s.%s
-          (id, geo, operation, author, version, jsondata, searchable)
-        VALUES (?, ?, ?, ?, ?, ?, ?)
-        """.formatted(schema, table);
+    String insertSql = String.format(
+        "INSERT INTO %s.%s\n" +
+        "  (id, geo, operation, author, version, jsondata, searchable)\n" +
+        "VALUES (?, ?, ?, ?, ?, ?, ?)\n", schema, table);
 
     try (Connection connection = dataSourceProvider.getWriter().getConnection()) {
       connection.setAutoCommit(false);
